examples/test/testpolicy14149.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14149
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key38: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value30
          key9: value13
          key46: value14
      podSelector:
        matchLabels:
          key5: value45
          key30: value23
